fix alignment

--- a/src/app/pokemon-browser/components/list-pagination/list-pagination.component.scss
+++ b/src/app/pokemon-browser/components/list-pagination/list-pagination.component.scss
@@ -10,3 +10,7 @@
   padding: 0.5rem;
   text-transform: uppercase;
 }
+
+app-icon-button {
+  min-width: 138px;
+}
